[package]
name = "jsv"
version = "0.1.0"
edition = "2021"
description = "Validate JSON files against their $schema automatically"

[[bin]]
name = "jsv"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
jsonschema = "0.17"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1"
